// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test para <GifGrid /> debe mostrar items cuando cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3>
    One punch
  </h3>
  <div
    className="card-grid animate__animated animate__swing"
  >
    <GifGridItem
      id="123"
      key="123"
      title="mockTitle"
      url="https://lorem.com/img"
    />
  </div>
</Fragment>
`;

exports[`test para <GifGrid /> debe mostrarse correctamente 1`] = `
<Fragment>
  <h3>
    One punch
  </h3>
  <p
    className="animate__animated animate__bounceInRight"
  >
    loading...
  </p>
  <div
    className="card-grid animate__animated animate__swing"
  />
</Fragment>
`;
